Revert "- fixed text align bug"
This reverts commit a52a0e9be92b02be120faf216948211fae896bfb.

--- a/src/styles/game.module.scss
+++ b/src/styles/game.module.scss
@@ -117,7 +117,6 @@
       button {
         margin: 1rem 2rem;
         width: 100px;
-        text-align: left;
       }
 
       p {
